conversao-temperatura/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conversao-temperatura
  namespace: conversao-temperatura
spec:
  replicas: 2
  selector:
    matchLabels:
      app: conversao-temperatura
  template:
    metadata:
      labels:
        app: conversao-temperatura
    spec:
      containers:
      - name: conversao-temperatura
        image: fspelling/conversao-temperatura
        resources:
          requests:
            cpu: "0.2"
            memory: 64Mi
          limits:
            cpu: "500m"
            memory: 512Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
