conversao-temperatura/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conversao-temperatura
  namespace: conversao-temperatura
spec:
  selector:
    app: conversao-temperatura
  ports:
  - name: http
    port: 80
    targetPort: 8080
