conversao-temperatura/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-conversao-temperatura
  namespace: conversao-temperatura
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /conversao-temperatura
        pathType: Prefix
        backend:
          service:
            name: conversao-temperatura
            port: 
              number: 80
